--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1HQZBdsAVCBjCeSnWCDsmmGL6C8NJdgA&language=en"></script>
     <title>SMART PANEL</title>
+    <link href="https://necolas.github.io/normalize.css/8.0.0/normalize.css" rel="stylesheet"/>
 </head>
 <body>
     <div id="app"></div>
